--- a/.env
+++ b/.env
@@ -1,8 +1,3 @@
-POSTGRES_URL="postgres://default:PJBu95HxDVzL@ep-restless-dust-a1fbf1ek-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
-POSTGRES_PRISMA_URL="postgres://default:PJBu95HxDVzL@ep-restless-dust-a1fbf1ek-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
-POSTGRES_URL_NO_SSL="postgres://default:PJBu95HxDVzL@ep-restless-dust-a1fbf1ek-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb"
-POSTGRES_URL_NON_POOLING="postgres://default:PJBu95HxDVzL@ep-restless-dust-a1fbf1ek.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
-POSTGRES_USER="default"
-POSTGRES_HOST="ep-restless-dust-a1fbf1ek-pooler.ap-southeast-1.aws.neon.tech"
-POSTGRES_PASSWORD="PJBu95HxDVzL"
-POSTGRES_DATABASE="verceldb"
+
+
+DATABASE_URL="postgres://myuser:mypassword@localhost:5432/mydb?schema=public"
