--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "node -r dotenv/config ./scripts/seed.js"
+    "seed": "node -r dotenv/config ./scripts/seed.js",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@prisma/client": "5.12.1",
     "@vercel/postgres": "^0.8.0",
+    "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
     "next": "14.1.4",
+    "pg": "^8.11.5",
+    "prisma": "^5.12.1",
     "react": "^18",
     "react-dom": "^18"
   },
